<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微太工</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="find_pwd">找回密码</string>
    <string name="username">用户名</string>
    <string name="head">头像</string>
    <string name="email">Email</string>
    <string name="password">密码</string>
    <string name="passwordRepeat">请再次输入密码</string>
    <string name="send_email">发送验证邮件</string>
    <string name="menu_sendMsg">私信</string>
    <string name="settings">设置</string>
    <string name="version">版本</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="color">颜色主题</string>
    <string name="notifyType">提醒类型</string>
    <string name="vibrate">震动</string>
    <string name="sound">声音</string>
    <string name="send_post">发帖</string>
    <string name="title">标题</string>
    <string name="register_need_know">注册须知</string>
    <string name="agreement_read">我已阅读并同意注册协议</string>
    <string name="app_about">软件相关</string>
    <string name="image">图片</string>
    <string name="content">正文</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="empty_comment">暂时还没有人回帖</string>
    <string name="post">帖子</string>
    <string name="comment">跟贴</string>
    <string name="push">推送</string>
    <string name="menu_req_manager">申请管理员</string>
    <string name="menu_req_super_manager">申请超级管理员</string>
<string name="delete">删除</string>
<string name="top">置顶</string>
<string name="jp">精品</string>
</resources>