<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/selector_post"
    android:padding="8dp" >

    <com.gyxy.sns.ui.widget.BezelImageView
        android:id="@+id/biv_head"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/head"
        android:scaleType="centerCrop"
        android:src="@drawable/person_image_empty"
        app:maskDrawable="@drawable/circle_mask" />

    <TextView
        android:id="@+id/tv_top"
        android:layout_width="45dp"
        android:layout_height="19dp"
        android:layout_below="@id/biv_head"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:text="置顶"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_jp"
        android:layout_width="45dp"
        android:layout_height="19dp"
        android:layout_below="@id/tv_top"
        android:layout_marginTop="1dp"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:text="精品"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/biv_head"
        android:layout_toRightOf="@+id/biv_head"
        android:gravity="center_vertical"
        android:text="@string/username" />
    
    <TextView
        android:id="@+id/tv_updateAt"
        android:layout_below="@id/tv_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/biv_head"
        android:layout_toRightOf="@+id/biv_head"
        android:gravity="center_vertical"
        android:text="最后回复时间" />

    <include
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/tv_username"
        android:layout_alignStart="@+id/tv_username"
        android:layout_below="@id/biv_head"
        layout="@layout/separator"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_username"
        android:layout_alignStart="@+id/tv_username"
        android:layout_below="@id/separator"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_username"
        android:layout_alignStart="@+id/tv_username"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="8dp"
        android:text="@string/content"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_username"
        android:layout_alignStart="@+id/tv_username"
        android:layout_below="@id/tv_content"
        android:contentDescription="@string/image"
        android:visibility="gone" />

</RelativeLayout>