<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.gyxy.sns.ui.activity.PostActivity" >

    <include layout="@layout/toolbar" />
    <!-- 帖子标题内容图片 -->

    <RelativeLayout
        android:id="@+id/rl_post"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:background="@color/BLUE_TIT"
        android:paddingLeft="@dimen/activity_horizontal_margin" 
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.gyxy.sns.ui.widget.BezelImageView
            android:id="@+id/biv_head"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:clickable="true"
        	android:scaleType="centerCrop"
            android:contentDescription="@string/head"
            android:src="@drawable/person_image_empty"
            app:maskDrawable="@drawable/circle_mask" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_alignTop="@id/biv_head"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/biv_head"
            android:layout_toRightOf="@+id/biv_head"
            android:gravity="center_vertical"
            android:text="@string/username" />
        
        <TextView
            android:id="@+id/tv_createdAt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_username"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/biv_head"
            android:layout_toRightOf="@+id/biv_head"
            android:gravity="center_vertical"
            android:text="创建时间" />
 

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/biv_head"
            android:layout_marginTop="8dp"
            android:text="@string/title"
            android:textSize="20sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_title"
            android:layout_alignStart="@id/tv_title"
            android:layout_below="@id/tv_title"
            android:layout_marginTop="8dp"
            android:text="@string/content"
            android:textSize="18sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_title"
            android:layout_alignStart="@id/tv_title"
            android:layout_below="@id/tv_content"
            android:layout_marginEnd="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginStart="3dp"
            android:contentDescription="@string/image"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@id/rl_post" >

        <View
            android:id="@+id/view_up"
            android:layout_width="fill_parent"
            android:layout_height="24dp"
            android:background="@color/BLUE_TIT" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="24dp"
            android:layout_below="@id/view_up"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="回复" />

        <com.gc.materialdesign.views.ButtonFloat
            android:id="@+id/btn_more"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="#1E88E5"
            android:scaleType="fitCenter"
            app:iconDrawable="@drawable/ic_action_new" >
        </com.gc.materialdesign.views.ButtonFloat>
    </RelativeLayout>
    <!-- 回帖 -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_below="@id/view" >

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >

            <ListView
                android:id="@android:id/list"
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.v4.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/empty_comment"
            android:visibility="invisible" />
    </FrameLayout>

    <!-- 回帖 edittext + imagebutton -->
    <include layout="@layout/input_text"/>
   
</RelativeLayout>