<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    android:gravity="top"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tv_app_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="show_login_Fragment"
        android:text="@string/app_name"
        android:textColor="#ff00ff00"
        android:textSize="30sp" />

    <!--
    <ImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/tit" />
    -->

    <com.gyxy.sns.ui.widget.BezelImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/tit_red"
        app:maskDrawable="@drawable/circle_mask" />

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_app_icon"
        android:layout_marginTop="60dp"
        android:visibility="invisible" >
    </FrameLayout>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:onClick="show_register_Fragment"
        android:text="@string/register"
        android:textColor="#ff00ff00"
        android:textSize="20sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_find_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:onClick="show_find_pwd_Fragment"
        android:text="@string/find_pwd"
        android:textColor="#ff00ff00"
        android:textSize="20sp"
        android:visibility="invisible" />

</RelativeLayout>